--- a/game.project
+++ b/game.project
@@ -1,16 +1,18 @@
 [bootstrap]
 main_collection = /main/main.collectionc
+render = /rendercam/rendercam.renderc
 
 [script]
 shared_state = 1
 
 [display]
-width = 960
-height = 640
+width = 512
+height = 512
 
 [android]
 input_method = HiddenInputField
 
 [project]
 title = mario
+dependencies = https://github.com/rgrams/rendercam/archive/v1.0.1.zip
 
